--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
     "routes": [
       {
         "src": "/ZltTopup.apk",
-        "dest": "https://github.com/zlantobi8/onboard/releases/download/v1.0/ZltTopup.apk",
+        "dest": "https://github.com/zlantobi8/onboard/releases/download/v1.0/zlt-Topup.apk",
         "headers": {
           "content-type": "application/vnd.android.package-archive"
         }
